syntax = "proto3";

package proto;
option go_package = "./proto";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
    rpc GetOrder (GetOrderRequest) returns (OrderResponse);
    rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
    rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (OrderResponse);
}

message Order {
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    double total_amount = 4;
    string status = 5;
    string shipping_address = 6;
    string payment_method = 7;
    string created_at = 8;
    string updated_at = 9;
}

message OrderItem {
    string product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    double price = 4;
}

message CreateOrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
    string shipping_address = 3;
    string payment_method = 4;
}

message GetOrderRequest {
    string id = 1;
}

message ListOrdersRequest {
    string user_id = 1;
    int32 page = 2;
    int32 limit = 3;
}

message ListOrdersResponse {
    repeated Order orders = 1;
    int32 total = 2;
}

message UpdateOrderStatusRequest {
    string id = 1;
    string status = 2;
}

message OrderResponse {
    Order order = 1;
}
